--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,12 @@
   <head>
     <title>Todoapp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%#= javascript_include_tag "application"%>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
